# monalsec

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
aptsec/: cli.py  db.py  models.py
aptsec/parsers/: nmap.py
aptsec/report/: generator.py  template.py
docs/plans/: 2026-02-23-aptsec-containerization-design.md  2026-02-23-aptsec-containerization.md
tests/: test_cli_engagement.py  test_cli_import.py  test_cli_report.py  test_db.py  test_e2e.py  test_models.py  test_nmap_parser.py  test_report.py  test_smoke.py
tests/fixtures/: nmap_sample.xml
