[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aptsec"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "reportlab>=4.1",
    "lxml>=5.1",
    "rich>=13.7",
]

[project.scripts]
aptsec = "aptsec.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
